add pagination information to user get list
