# swagger.yaml
@@ -218,9 +218,23 @@ paths:
         '200':
           description: 'successful operation'
           schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/UserRequest'
+            type: object
+            properties:
+              models:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserRequest'
+              pagination:
+                type: object
+                properties:
+                  page:
+                    type: number
+                  pageSize:
+                    type: number
+                  rowCount:
+                    type: number
+                  pageCount:
+                    type: number
         '401':
           $ref: '#/components/responses/Unauthorized'
       security:
